Fix for test failure
